feat(backend): add purchase cursor pagination
